--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "enzyme": "^3.4.4",
+    "enzyme-adapter-react-16": "^1.2.0",
+    "jest": "^23.5.0",
     "less": "^3.8.1"
   }
 }
