--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "jest-cli": "^23.5.0",
     "react": "^16.4.2",
+    "react-contexify": "^3.0.3",
     "react-dom": "^16.4.2",
     "react-hot-loader": "^3.1.3",
     "react-scripts": "1.1.4",
@@ -21,7 +21,6 @@
   "devDependencies": {
     "enzyme": "^3.4.4",
     "enzyme-adapter-react-16": "^1.2.0",
-    "jest": "^23.5.0",
     "less": "^3.8.1"
   }
 }
