--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "dependencies": {
     "react": "^16.4.2",
-    "react-contexify": "^3.0.3",
     "react-dom": "^16.4.2",
+    "react-router-dom": "^4.3.1",
     "react-hot-loader": "^3.1.3",
     "react-scripts": "1.1.4",
     "semantic-ui-css": "^2.3.3",
